--- a/index.html
+++ b/index.html
@@ -4,85 +4,80 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menú de Apps – PROVSOFT</title>
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
+      font-family: 'Poppins', Arial, sans-serif;
       margin: 0;
       padding: 20px;
       text-align: center;
-      color: #222;
+      background: linear-gradient(135deg, #fff9e6, #fff1b8);
+      color: #333;
     }
+
     h1 {
-      font-size: 26px;
+      font-size: 28px;
       margin-bottom: 10px;
-      color: #b00;
+      color: #c40000;
+      font-weight: 700;
     }
+
     .apps {
       display: flex;
       flex-direction: column;
-      gap: 15px;
-      max-width: 400px;
-      margin: 20px auto;
+      gap: 14px;
+      max-width: 420px;
+      margin: 25px auto;
     }
+
     a {
       display: block;
-      padding: 14px;
-      border-radius: 8px;
+      padding: 15px;
+      border-radius: 14px;
       text-decoration: none;
-      background: #0066cc;
-      color: white;
-      font-weight: bold;
-      transition: background 0.3s;
+      background: linear-gradient(135deg, #ffcc00, #ffb300);
+      color: #7a0000;
+      font-weight: 700;
+      font-size: 15px;
+      box-shadow: 0 6px 14px rgba(0,0,0,.15);
+      transition: transform .15s, box-shadow .15s, background .2s;
     }
+
     a:hover {
-      background: #004a99;
+      transform: translateY(-2px);
+      box-shadow: 0 10px 18px rgba(0,0,0,.25);
+      background: linear-gradient(135deg, #ffd633, #ffc107);
     }
+
     footer {
-      margin-top: 30px;
+      margin-top: 35px;
       font-size: 13px;
-      color: #555;
+      color: #7a0000;
+      font-weight: 600;
     }
   </style>
 </head>
+
 <body>
-  <h1>📱 PROVSOFT – Menú de Apps</h1>
+
+  <h1>🍬 PROVSOFT – Menú de Apps</h1>
 
   <div class="apps">
     <a href="ARTPDDPWA/index.html">🔎 Buscador de Artículos</a>
+    <a href="MAPEOCATA/MAPEO.html">🧩 Mapear Tecnopro Artículos</a>
+    <a href="MAPEOCATA/SUBIDA.html">⬆️ Subida Tecnopro Artículos</a>
+    <a href="POSVTA4/POSV4PASS.html">🧾 POS V4 General</a>
+    <a href="POSVTA4/CORTEV4.html">📊 Corte V4 POS</a>
+    <a href="POSVTA4/MONITORTICKETS.html">🎫 Visor de Tickets</a>
+    <a href="POSVTA4/REPORTE-CORTE-V1.2.html">📄 Reporte Ventas para Facturar</a>
+    <a href="SIFEI/FACTURACIONTICKETS.html">🧾 SIFEI POS</a>
+    <a href="POSVTA4/RECORTES.html">✂️ Recortes</a>
+    <a href="POSVTA4/CATACOMIS.html">💰 Asignación Comisiones</a>
   </div>
-<div class="apps">
-   <a href="MAPEOCATA/MAPEO.html"> MAPEAR TECNOPRO ARTICULOS </a>
-  </div>
-<div class="apps">
-   <a href="MAPEOCATA/SUBIDA.html"> SUBIDA TECNOPRO ARTICULOS </a>
-  </div>
-<div class="apps">
-   <a href="POSVTA4/POSV4PASS.html"> POS V4 GENERAL </a>
-  </div>
-<div class="apps">
-   <a href="POSVTA4/CORTEV4.html"> CORTE V4 POS 2 </a>
-  </div>  
-<div class="apps">
-   <a href="POSVTA4/MAPAV4.html"> MAPA V4 POS 2 </a>
-  </div>    
-<div class="apps">
-   <a href="POSVTA4/MONITORTICKETS.html"> VISOR TICKETS 2 </a>
-  </div>
-<div class="apps">
-   <a href="POSVTA4/REPORTE-CORTE-V1.2.html"> REPORTE DE VENTAS PARA FACTURAR V4 </a>
-  </div>
-<div class="apps">
-   <a href="SIFEI/FACTURACIONTICKETS.html"> SIFEI POS </a>
-  </div>
-  <div class="apps">
-   <a href="POSVTA4/RECORTES.html"> RECORTES </a>
-  </div>
-<div class="apps">
-   <a href="POSVTA4/CATACOMIS.html"> ASIGNACION COMISION TABLA </a>
-  </div>  
+
+  <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
+
 </body>
 </html>
-
